# rigor

./: CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
arch-decisions-workspace/evals/: evals.json
code-review-workspace/evals/: evals.json
code-structure-workspace/evals/: evals.json
debug-workspace/evals/: evals.json
docs/plans/: 2026-03-29-ai-skills-scaffold.md
docs/specs/: 2026-03-29-ai-skills-design.md
e2e-workspace/evals/: basic-claude.md  evals.json  skills-claude.md
go-writer-workspace/evals/: evals.json
init-workspace/evals/: evals.json
py-writer-workspace/evals/: evals.json
refactor-workspace/evals/: evals.json
rs-writer-workspace/evals/: evals.json
rs-writer-workspace/evals/eval-1-follow-patterns/project/: Cargo.toml
rs-writer-workspace/evals/eval-1-follow-patterns/project/src/: error.rs  user.rs
rs-writer-workspace/iteration-1/eval-2-new-pattern/without_skill/outputs/: Cargo.toml  analysis.md
rs-writer-workspace/iteration-1/eval-2-new-pattern/without_skill/outputs/src/: handlers.rs  lib.rs  main.rs  product.rs  router.rs
skills/: architecture-decisions.md  code-review.md  debug.md  go:writer.md  py:writer.md  rs:writer.md  tdd.md  ts:organizer.md  ts:unit-test.md  ts:writer.md
skills/architecture-decisions/: SKILL.md
skills/code-review/: SKILL.md
skills/code-structure/: SKILL.md
skills/debug/: SKILL.md
skills/go-writer/: SKILL.md
skills/init/: SKILL.md
skills/py-writer/: SKILL.md
skills/tdd/: SKILL.md
templates/: base.md  go.md  python.md  rust.md  typescript.md
(+408 files in other folders)
